@@ -5,6 +5,7 @@
 
 #include "Building.h"
 #include "Sim/Map/ReadMap.h"
+#include "Sim/Units/UnitDef.h"
 
 #include "mmgr.h"
 
@@ -17,7 +18,6 @@ CR_BIND_DERIVED(CBuilding, CUnit);
 CBuilding::CBuilding()
 {
 	immobile=true;
-	blockHeightChanges=true;
 }
 
 CBuilding::~CBuilding()
@@ -31,4 +31,11 @@ void CBuilding::Init(void)
 	physicalState = OnGround;
 
 	CUnit::Init();
+}
+
+void CBuilding::UnitInit (UnitDef* def, int team, const float3& position)
+{
+	if(def->levelGround)
+		blockHeightChanges=true;
+	CUnit::UnitInit(def,team,position);
 }
